<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountryDataActivity"
    android:background="@color/fond_bleu">

    <TextView
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        android:id="@+id/button_cal"
        android:layout_width="91dp"
        android:layout_height="55dp"
        android:text="@string/chk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.52" />

    <TextView
        android:id="@+id/dateTv"
        android:layout_width="76dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fond_table_bis"
        android:layout_marginHorizontal="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        >
        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fond_table"
                android:layout_marginLeft="1sp"
                android:layout_marginRight="1sp"
                android:layout_marginTop="1sp"
                android:layout_marginBottom="1sp"
                android:text="@string/confirmed"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/nb_conf1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/white"
                android:layout_marginLeft="1sp"
                android:layout_marginRight="1sp"
                android:layout_marginTop="1sp"
                android:layout_marginBottom="1sp"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fond_table"
                android:layout_marginLeft="1sp"
                android:layout_marginRight="1sp"
                android:layout_marginTop="1sp"
                android:layout_marginBottom="1sp"
                android:text="@string/deaths"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/nb_dead1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/white"
                android:layout_marginLeft="1sp"
                android:layout_marginRight="1sp"
                android:layout_marginTop="1sp"
                android:layout_marginBottom="1sp"
                />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fond_table"
                android:layout_marginLeft="1sp"
                android:layout_marginRight="1sp"
                android:layout_marginTop="1sp"
                android:layout_marginBottom="1sp"
                android:text="@string/recovered"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/nb_recov1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_marginLeft="1sp"
                android:layout_marginRight="1sp"
                android:layout_marginTop="1sp"
                android:layout_marginBottom="1sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/drapeau"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:background="@drawable/iran"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

</androidx.constraintlayout.widget.ConstraintLayout>